--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,27 @@ __pycache__
 .vscode
 
 venv/
+
+# environment stuff
+.env
+ud-env
+
+# python compiled files
+*.pyc
+
+# db files
+corpora
+.users.db
+
+# log stuff
+logs
+
+# vim swap files
+*.swp
+
+# node stuff
+node_modules
+.nyc_output
+
+# ubuntu process files
+.nfs*
